--- a/webapp/channels/package.json
+++ b/webapp/channels/package.json
@@ -189,7 +189,7 @@
     "check:eslint": "eslint --ext .js,.jsx,.tsx,.ts ./src --quiet --cache",
     "check:stylelint": "stylelint \"**/*.{css,scss}\" --cache",
     "fix": "eslint --ext .js,.jsx,.tsx,.ts ./src --quiet --fix --cache && stylelint \"**/*.{css,scss}\" --fix --cache",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production webpack --progress",
     "run": "webpack --progress --watch",
     "dev-server": "webpack serve --mode development",
     "test": "cross-env TZ=Etc/UTC jest",
